[package]
name = "cart"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
heapless = { version = "0.7", default-features = false }
oorandom = "11"

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

[features]
# use `--no-default-features` or comment out next line to disable allocator
# default = ["buddy-alloc"]
